--- a/index.html
+++ b/index.html
@@ -5,38 +5,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<link rel="stylesheet" href="https://cdn.knightlab.com/libs/storymapjs/latest/css/storymap.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-<style type="text/css">
-
-.row {
-	padding-top: 5%;
-}
-
-#menu {
-	margin-top: 10% auto;
-}
-
-#mapdiv {
-	width: 100%; 
-	height: 550px;
-}
-
-#img {
-	width: 100%;
-}
-
-#img > img {
-	width: 250px;
-	height: 220px;
-}
-
-img {
-	width: 100%;
-	height: 100%;
-}
-
-</style>
-
+	<link href="css/lightbox.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 
 <body>
@@ -52,9 +22,11 @@ img {
 			<div class="col-12" id="mapdiv"></div>
 		</div>
 		<div class="row">
-			<div class="col-4" id='menu'></div>
-			<div class="col-8" id='img'></div>	
+			<div class="col-4" id='menu'></div>	
 		</div>		
+		<div class="row">
+			<div class="col-12" id='img'></div>
+		</div>
 	</div>
 
 <!-- SCRIPTS -->
@@ -65,75 +37,8 @@ img {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
-<script>
-var storymap_data = 'data/catastro.json';
-
-var storymap_options = {
-   show_lines: false,
-   line_follows_path: false,
-   show_lines: false,
-   show_history_line: false
-};
-
-var storymap = new VCO.StoryMap('mapdiv', storymap_data, storymap_options);
-
-d3.json(storymap_data, function(error, data) {
-	a = data.storymap.slides
-	b = []
-	for (let i of a){
-		for (let j of i.text.tags){
-			b.push(j)
-		}
-	}
-	var select = d3.select('#menu')
-	  .append('select')
-	  	.attr('id','select')
-	    .on('change',onchange)
-
-	var options = select
-	  .selectAll('option')
-		.data(b).enter()
-		.append('option')
-			.text(function (d) { return d; })
-			.attr('id',function (d) { return d; });
-
-	// MENU
-	function addID(){
-		selectValue = d3.select('select').property('value')	
-		d3.select('#menu')
-			.attr('id',selectValue)		
-	};
-
-	function onchange() {
-		selectValue = d3.select('select').property('value')
-		d3.select('#menu')
-			.append('p')
-	};	
-
-	// Render images //
-	$(document).ready(function() {
-	    $("option").click(function(event) {
-	    	$("#img").empty();
-	    	x = d3.select('select').property('value')
-	    	// console.log(x)
-	    	for (let i of a){
-	    		tags = i.text.tags
-	    		if (tags.includes(x)) {
-	    			f = '"' + String(i.media.url) + '"'
-	        		$("#img").append('<img src=' + f + '>');
-	    		}
-			}
-	    });
-	});
-
-});
-
-window.onresize = function(event) {
-    storymap.updateDisplay(); // this isn't automatic
-}
-
-</script>
+<script src="js/lightbox.js"></script>
+<script src="js/index.js" type="text/javascript"></script>
 
 
 </body>
