--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
 	<title>Mapa Situado</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<link rel="stylesheet" href="https://cdn.knightlab.com/libs/storymapjs/latest/css/storymap.css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
+   integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+   crossorigin=""/>	
 	<link href="css/lightbox.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
-
 <body>
-	<!-- Image and text -->
 	<nav class="navbar navbar-light bg-light">
 	  <a class="navbar-brand" href="#">
 	    <img src="" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -19,27 +20,34 @@
 	</nav>	
 	<div class="container">
 		<div class="row">
-			<div class="col-12" id="mapdiv"></div>
+			<div id="map"></div>
 		</div>
 		<div class="row">
-			<div class="col-4" id='menu'></div>	
+			<div class="col-12 text-center">
+				<button type="button" class="btn btn-outline-light" id="terrenovaras">Terreno Varas Mena</button>
+				<button type="button" class="btn btn-outline-light" id="catastrovaras">Catastro Varas Mena</button>
+				<button type="button" class="btn btn-outline-light" id="terrenoLaReina">Terreno Villa La Reina</button>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12 imagenesTags">
+				<div id='menu'></div>		
+			</div>			
 		</div>		
 		<div class="row">
-			<div class="col-12" id='img'></div>
+			<div class="col-12 active" id='imagenes'>
+			</div>
 		</div>
 	</div>
 
 <!-- SCRIPTS -->
 <script type="text/javascript" src='js/d3.v3.min.js'></script>
-<script type="text/javascript" src="js/storymap-min.js"></script>
-<script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js'></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script src="js/lightbox.js"></script>
-<script src="js/index.js" type="text/javascript"></script>
-
-
+ <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA==" crossorigin=""></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script type="text/javascript" src='js/underscore.js'></script>
+<!-- CUSTOM -->
+<script src="index.js" type="text/javascript"></script>
 </body>
 </html>
